--- a/literatura.bib
+++ b/literatura.bib
@@ -41,6 +41,15 @@
 }
 
 
+@article{petric_nevronska,
+	title={Kompenzacija trenja in gravitacije na robotu Mitsubishi PA-10},
+	author={Petri\v{c}, Tadej and Munih, Marko},
+	journal={Seminarska naloga},
+	year={2010}
+	address = {Ljubljana}
+};
+
+
 %-------------------------- PREDLOGE ---------------------------------------
 
 @book{juvznivc1992diplomska,
