--- a/Slike/arm_length.tex
+++ b/Slike/arm_length.tex
@@ -1,5 +1,5 @@
 \begin{figure}
   \includegraphics[width=\linewidth]{./Slike/arm_length.png}
-  \caption{Dimenzije roke za identifikacijo D-H parametrov}
+  \caption{Dimenzije roke za identifikacijo D-H parametrov.}
   \label{fig:pa10drawing}
 \end{figure}
