--- a/macros.tex
+++ b/macros.tex
@@ -1,3 +1,4 @@
 % USER DEFINED MACROS
 \newcommand{\matlab}{MATLAB\textsuperscript{\textregistered}}
 \newcommand{\simulink}{SIMULINK\textsuperscript{\textregistered}}
+\newcommand{\matsim}{MATLAB\textsuperscript{\textregistered} SIMULINK\textsuperscript{\textregistered}}
