--- a/Slike/pa10-drawing.tex
+++ b/Slike/pa10-drawing.tex
@@ -1,5 +1,6 @@
 \begin{figure}
-  \includegraphics[width=\linewidth]{./Slike/pa10-drawing.png}
-  \caption{Skica robotskega mehanizma PA 10}
-  \label{fig:pa10drawing}
+	\centering
+	\includegraphics[height=7cm]{./Slike/pa10-drawing.png}
+	\caption{Skica robotskega mehanizma PA 10}
+	\label{fig:pa10drawing}
 \end{figure}
